[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/background-sky.png" type="Texture" id=1]
[ext_resource path="res://assets/title-text.tres" type="DynamicFont" id=2]
[ext_resource path="res://assets/button-text.tres" type="DynamicFont" id=3]
[ext_resource path="res://src/GameOver.gd" type="Script" id=4]

[node name="GameOver" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="."]
margin_right = 320.0
margin_bottom = 180.0
texture = ExtResource( 1 )

[node name="GameOverLabel" type="Label" parent="."]
margin_left = 42.0
margin_top = 31.0
margin_right = 270.0
margin_bottom = 77.0
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0.356863, 0.431373, 0.882353, 1 )
text = "Game over...
Your score was "
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Score" type="Label" parent="."]
margin_left = 43.0
margin_top = 80.0
margin_right = 271.0
margin_bottom = 102.0
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0.87451, 0.443137, 0.14902, 1 )
text = "0"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RestartButton" type="Button" parent="."]
margin_left = 123.0
margin_top = 105.0
margin_right = 189.0
margin_bottom = 125.0
focus_mode = 0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0.85098, 0.627451, 0.4, 1 )
custom_colors/font_color_hover = Color( 0.933333, 0.764706, 0.603922, 1 )
custom_colors/font_color_pressed = Color( 0.87451, 0.443137, 0.14902, 1 )
enabled_focus_mode = 0
text = "RESTART"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MenuButton" type="Button" parent="."]
margin_left = 133.0
margin_top = 122.0
margin_right = 177.0
margin_bottom = 142.0
focus_mode = 0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0.85098, 0.627451, 0.4, 1 )
custom_colors/font_color_hover = Color( 0.933333, 0.764706, 0.603922, 1 )
custom_colors/font_color_pressed = Color( 0.87451, 0.443137, 0.14902, 1 )
enabled_focus_mode = 0
text = "MENU"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="QuitButton" type="Button" parent="."]
margin_left = 135.0
margin_top = 139.0
margin_right = 177.0
margin_bottom = 159.0
focus_mode = 0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0.85098, 0.627451, 0.4, 1 )
custom_colors/font_color_hover = Color( 0.933333, 0.764706, 0.603922, 1 )
custom_colors/font_color_pressed = Color( 0.87451, 0.443137, 0.14902, 1 )
enabled_focus_mode = 0
text = "QUIT"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="RestartButton" to="." method="_on_RestartButton_pressed"]
[connection signal="pressed" from="MenuButton" to="." method="_on_MenuButton_pressed"]
[connection signal="pressed" from="QuitButton" to="." method="_on_QuitButton_pressed"]
